# pricer_rs

./: Cargo.toml
i18n/en/: pricer_rs.ftl
src/: app.rs
